<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pedir_dia_layout"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@drawable/borde"
    android:padding="4dp">

    <TextView
        android:id="@+id/pedir_dia_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/NombreCompa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pedir_dia_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/Telefono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pedir_dia_nombre"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pedir_dia_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devolver_dia"
        app:layout_constraintBottom_toBottomOf="@+id/pedir_dia_nombre"
        app:layout_constraintEnd_toStartOf="@+id/pedir_dia_iv_dialogo"
        app:layout_constraintStart_toEndOf="@+id/pedir_dia_telefono"
        app:layout_constraintTop_toTopOf="@+id/pedir_dia_nombre" />


    <ImageButton
        android:id="@+id/pedir_dia_iv_dialogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/solicitar"
        app:layout_constraintBottom_toBottomOf="@+id/pedir_dia_dias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pedir_dia_dias"
        app:srcCompat="@android:drawable/ic_menu_day" />

</androidx.constraintlayout.widget.ConstraintLayout>