<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    tools:context=".Registro">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:fontFamily="casual"
        android:text="@string/nombre"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="11"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNombre"
        app:layout_constraintTop_toTopOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/tvApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/Apellidos"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="11"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvApellidos"
        app:layout_constraintEnd_toEndOf="@+id/etNombre"
        app:layout_constraintStart_toStartOf="@+id/etNombre"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/Telefono"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvApellidos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvApellidos"
        app:layout_constraintTop_toBottomOf="@+id/tvApellidos" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/etApellidos"
        app:layout_constraintStart_toStartOf="@+id/etApellidos"
        app:layout_constraintTop_toTopOf="@+id/tvTelefono" />

    <TextView
        android:id="@+id/tvAlias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/Alias"
        android:textAlignment="gravity"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTelefono"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTelefono"
        app:layout_constraintTop_toBottomOf="@+id/tvTelefono" />

    <EditText
        android:id="@+id/etAlias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/etTelefono"
        app:layout_constraintStart_toStartOf="@+id/etTelefono"
        app:layout_constraintTop_toTopOf="@+id/tvAlias" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/Email"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvAlias"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlias" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/etAlias"
        app:layout_constraintStart_toStartOf="@+id/etAlias"
        app:layout_constraintTop_toTopOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/Password"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toTopOf="@+id/tvPassword" />

    <TextView
        android:id="@+id/tvRepitePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/Password"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <EditText
        android:id="@+id/etRepitePassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="8"
        android:fontFamily="casual"
        android:gravity="center_vertical|fill_vertical"
        android:hint="@string/RepitePassword"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tvRepitePassword"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toTopOf="@+id/tvRepitePassword" />

    <Button
        android:id="@+id/btRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/Registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRepitePassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>