<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagenLista"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNombreCompi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginTop="4dp"
                android:text="@string/NombreCompa"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAliasCompi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Alias"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvNumTlfnoCompi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/NumeroTelefono"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:text="1"
                android:textAlignment="center"
                android:textDirection="locale"
                android:textIsSelectable="true"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>